--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WordPress boilerplate theme for use as a starting point for development",
   "scripts": {
     "build": "webpack --config config/webpack.config.js",
-    "watch": "webpack --watch --config config/webpack.config.js"
+    "watch": "webpack --watch --config config/webpack.config.js",
+    "dev": "webpack -p --config config/webpack.config.js"
   },
   "repository": "https://github.com/designfwd/fwd-boilerplate-theme.git",
   "author": "FWD Creative LLC",
