--- a/config/.stylelintrc
+++ b/config/.stylelintrc
@@ -28,8 +28,8 @@
     # Keyframe declaration
     "keyframe-declaration-no-important": true,
 
-    # Declaration block
-    "declaration-block-no-duplicate-properties": true,
+    # Declaration block  "declaration-block-no-duplicate-properties": true,
+   
     "declaration-block-no-shorthand-property-overrides": true,
 
     # Block
@@ -49,8 +49,8 @@
     # Comment
     "comment-no-empty": true,
 
-    # General/Sheet
-    "no-descending-specificity": true,
+    # General/Sheet "no-descending-specificity": true,
+    
     "no-duplicate-at-import-rules": true,
     "no-duplicate-selectors": true,
     "no-empty-source": true,
@@ -81,8 +81,8 @@
     # Color
     "color-hex-length": "short",
 
-    # Font family
-    "font-family-name-quotes": "always-where-recommended",
+    # Font family "font-family-name-quotes": "always-where-recommended",
+    
 
     # Function
     "function-comma-space-before": "never",
@@ -90,12 +90,11 @@
     "function-name-case": "lower",
     "function-whitespace-after": "always",
 
-    # Number
-    "number-leading-zero": "never",
+    # Number "number-leading-zero": "never",
     "number-no-trailing-zeros": true,
 
-    # Length
-    "length-zero-no-unit": true,
+    # Length "length-zero-no-unit": true,
+   
 
     # Unit
     "unit-case": "lower",
@@ -138,8 +137,7 @@
     "at-rule-semicolon-newline-after": "always",
     "at-rule-semicolon-space-before": "never",
 
-    # General/Sheet
-    "indentation": 2,
+    # General/Sheet "indentation": 2,
     "no-eol-whitespace": true,
     "no-missing-end-of-source-newline": true,
   }
